<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
 <group android:id="@+id/group1">
     <item android:id="@+id/review"
         android:title="@string/review"
         android:icon="@drawable/star" />
     <item android:id="@+id/Fav"
         android:title="@string/favorite"
         android:icon="@drawable/favorite" />
     <item android:id="@+id/search"
         android:title="@string/search"
         android:icon="@drawable/green_search" />
 </group>

    <group android:id="@+id/group2">
        <item android:id="@+id/profile"
            android:title="@string/profile"
            android:icon="@drawable/profile" />
        <item android:id="@+id/setting"
            android:title="@string/setting"
            android:icon="@drawable/settings" />
    </group>
</menu>